adding modal task edition

--- a/task-manager-frontend/src/app/pages/layout/layout.component.html
+++ b/task-manager-frontend/src/app/pages/layout/layout.component.html
@@ -11,6 +11,7 @@
                 <div class="flex items-center space-x-4">
                     <!-- Botón para nueva tarea -->
                     <button id="newTaskBtn"
+                        (click)="openDialog()"
                         class="bg-primary hover:bg-secondary text-white px-4 py-2 rounded-md text-sm font-medium transition duration-150 ease-in-out">
                         <i class="fas fa-plus mr-2"></i>Nueva Tarea
                     </button>
