--- a/task-manager-frontend/src/app/pages/task/task.component.html
+++ b/task-manager-frontend/src/app/pages/task/task.component.html
@@ -120,7 +120,7 @@
                     >
                         <i class="fas fa-check"></i>
                     </button>
-                    <button 
+                    <button (click)="openDeleteDialog()"
                         class="p-2 text-gray-500 hover:text-red-500 transition-colors duration-150"
                         title="Eliminar tarea"
                     >
